--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "GivTCP"
 description: "TCP Modbus connection to MQTT/JSON for Givenergy Battery/PV Invertors"
-version: "1.1.0"
+version: "1.1.1"
 slug: "givtcp"
 init: true
 boot: auto
@@ -14,7 +14,7 @@ arch:
   - i386
 host_network: true
 options:
-  INVERTOR_IP: null
+  INVERTOR_IP: ""
   NUM_BATTERIES: 1
   MQTT_OUTPUT: True
   MQTT_ADDRESS: "127.0.0.1"
