--- a/ingress.conf
+++ b/ingress.conf
@@ -1,10 +1,10 @@
-#upstream settings {
-#    server http://127.0.0.1:6345/settings;
-#    server http://127.0.0.1:6346/settings backup;
-#    server http://127.0.0.1:6347/settings backup;
-#    server http://127.0.0.1:6348/settings backup;
-#    server http://127.0.0.1:6349/settings backup;
-#}
+upstream settings {
+    server 127.0.0.1:6345;
+    server 127.0.0.1:6346 backup;
+    server 127.0.0.1:6347 backup;
+    server 127.0.0.1:6348 backup;
+    server 127.0.0.1:6349 backup;
+}
 
 server {
     listen 8099;
@@ -19,9 +19,9 @@ server {
 
 #   Use a backup server for settings, in case
 #   someone doesn't use slot 1 and config page won't work
-#    location = /REST1/settings {
-#        proxy_pass settings;
-#    }
+    location /REST1/settings {
+        proxy_pass http://settings/settings;
+    }
 
     location /REST1/ {
         proxy_pass http://127.0.0.1:6345/;
