data smoothing fix and various

--- a/ingress.conf
+++ b/ingress.conf
@@ -19,8 +19,12 @@ server {
 
 #   Use a backup server for settings, in case
 #   someone doesn't use slot 1 and config page won't work
-    location /REST1/settings {
-        proxy_pass http://settings/settings;
+#    location /REST1/settings {
+#        proxy_pass http://settings/settings;
+#    }
+
+    location /settings {
+        proxy_pass http://127.0.0.1:6350/settings;
     }
 
     location /REST1/ {
