--- a/ingress_no_ssl.conf
+++ b/ingress_no_ssl.conf
@@ -1,3 +1,11 @@
+upstream settings {
+    server 127.0.0.1:6345;
+    server 127.0.0.1:6346 backup;
+    server 127.0.0.1:6347 backup;
+    server 127.0.0.1:6348 backup;
+    server 127.0.0.1:6349 backup;
+}
+
 server {
     listen 8099;
 #    allow  172.30.32.2;
@@ -6,6 +14,14 @@ server {
     error_log /dev/null;
     root /app/ingress;
 
+#   Use a backup server for settings, in case
+#   someone doesn't use slot 1 and config page won't work
+#    location /REST1/settings {
+#        proxy_pass http://settings/settings;
+#    }
+    location /settings {
+        proxy_pass http://127.0.0.1:6350/settings;
+    }
     location /REST1/ {
         proxy_pass http://127.0.0.1:6345/;
     }
