--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,15 @@
 GivTCP/settings.py
-GivTCP/evc_settings.py
 GivTCP/testdata.json
 GivTCP/startup.sh
 .lockfile
 *.pkl
 .forceFullRefresh
 test.txt
+.git
+.vscode
+Dockerfile
+WebDashboard/graphics
+
+# WebDashboard is a static site - node is not required
+# except as a helper to serve the site for development
+WebDashboard/package*
