--- a/settings.json
+++ b/settings.json
@@ -4,26 +4,31 @@
     "invertorIP_1": "",
     "inverter_enable_1": false,
     "Model_1": "",
+    "inverter_battery_only_1": false,
     "serial_number_1": "",
     "inverterName_1":"GivTCP",
     "invertorIP_2": "",
     "inverter_enable_2": false,
     "Model_2": "",
+    "inverter_battery_only_2": false,
     "serial_number_2": "",
     "inverterName_2":"GivTCP2",
     "invertorIP_3": "",
     "inverter_enable_3": false,
     "Model_3": "",
+    "inverter_battery_only_3": false,
     "serial_number_3": "",
     "inverterName_3":"GivTCP3",
     "invertorIP_4": "",
     "inverter_enable_4": false,
     "Model_4": "",
+    "inverter_battery_only_4": false,
     "serial_number_4": "",
     "inverterName_4":"GivTCP4",
     "invertorIP_5": "",
     "inverter_enable_5": false,
     "Model_5": "",
+    "inverter_battery_only_5": false,
     "serial_number_5": "",
     "inverterName_5":"GivTCP5",
     "Host_IP": "",
@@ -42,7 +47,7 @@
     "self_run_timer": 30,
     "self_run_timer_full": 120,
     "queue_retries": 2,
-    "data_smoother": "medium",
+    "data_smoother": "none",
     "Influx_Output": false,
     "influxURL": "",
     "influxToken": "",
