--- a/ingress.conf
+++ b/ingress.conf
@@ -9,8 +9,10 @@ upstream settings {
 server {
     listen 8099;
     listen 8098 ssl;
-#    allow  172.30.32.2;
-#    deny   all;
+    allow 10.0.0.0/8;
+    allow 172.16.0.0/12;
+    allow 192.168.0.0/16;
+    deny all;
     ssl_certificate /ssl/fullchain.pem;
     ssl_certificate_key /ssl/privkey.pem;
     access_log /dev/null;
