--- a/ingress_no_ssl.conf
+++ b/ingress_no_ssl.conf
@@ -8,8 +8,10 @@ upstream settings {
 
 server {
     listen 8099;
-#    allow  172.30.32.2;
-#    deny   all;
+    allow 10.0.0.0/8;
+    allow 172.16.0.0/12;
+    allow 192.168.0.0/16;
+    deny all;
     access_log /dev/null;
     error_log /dev/null;
     root /app/ingress;
